# the-agentic-future-is-here

./: .flake8  .gitignore  .pre-commit-config.yaml  BACKUP_OPTIMIZATION_SUMMARY.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_INTEGRATION_SUMMARY.md  CONTRIBUTING.md  FILTERING_TEST_SUMMARY.md  Makefile  README.md  TODO.md  WEB_GROUNDING_DEBUG_SUMMARY.md  catalog_final.csv  cookies.txt  csv_backup_20250829_214021.json  debug_tenant_test.py  filtering_test_results.json  local_env.txt  mypy.ini  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  small_backup_20250829_214326.json  test_auto_restore_backup.py  test_debug_console.html  test_export.json  test_filtering.py  verify_filtering.py
app/: __init__.py  db.py  endpoints.py  main.py  models.py  schemas.py  startup.py
data/: app_settings.json  tenant_products.csv  tenant_settings.json
docs/: AGENTS.md  CI_CD_SETUP.md  DEVELOPMENT_STANDARDS.md  MCP.md  OPTIMIZED_BACKUP_SYSTEM.md  PROJECT_RULES.md  README.md  TROUBLESHOOTING.md  grounding.md
scripts/: README_RENDER_SETUP.md  backfill_embeddings.sh  backup_cli.py  ci-status.sh  create_netflix_catalog.py  create_spotify_music_catalog.py  find_service_id.py  full_backup.py  full_restore.py  generate_backup_json.py  generate_small_backup.py  generate_tenant_products.py  run-ci-local.sh  setup-ci.sh  setup_render.sh  setup_render_env.py  smoke.sh
tests/: test_ai_integration.py  test_auto_backup.py  test_buyer_flow_signals_sales.py  test_buyer_flow_signals_sales.py.backup  test_buyer_independence.py  test_contract_constants.py  test_embeddings_async.py  test_env_boot.py  test_external_agents_probe_debug.py  test_external_agents_protocol_rules.py  test_mcp_client_basic.py  test_mcp_server_sales_rpc.py  test_nav_visibility.py  test_optimized_backup.py  test_orchestrator_circuit_breaker.py  test_orchestrator_sales_rest_vs_mcp.py  test_orchestrator_signals_mcp.py  (+14 more)
(+115 files in other folders)
